# tier4_perception_dataset_tools

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: pre-commit.yaml
pcd_type_updater/: README.md  compare_bags.py  constant.py  convert_pointcloud_types.py  pcd_type_updater.py  pyproject.toml
pcd_type_updater/config/: t4dataset_ids.yaml
pcd_type_updater/tools/: create_dataset_yaml.py  summarize_visualized_result.py
