[tool.poetry]
name = "pcd-type-updater"
version = "0.1.0"
description = ""
authors = ["Shin-kyoto <aquashin0202@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transforms3d = "^0.4.2"
pyyaml = "^6.0.1"
plotly = "^5.22.0"
pandas = "^2.2.2"
kaleido = "^0.2.1"
autoware_msg_bag_converter = {git = "ssh://git@github.com/hayato-m126/autoware_msg_bag_converter.git", rev = "main"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
